<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.dwichan.githubbook.ui.main.home.HomeFragment"
        android:label="@string/fragment_home_title"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.dwichan.githubbook.ui.main.favorite.FavoriteFragment"
        android:label="@string/fragment_favorite_title"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="id.dwichan.githubbook.ui.main.about.AboutFragment"
        android:label="@string/fragment_about_title"
        tools:layout="@layout/fragment_about" />
</navigation>